--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,6 +24,36 @@
 </head>
 <body>
 
+<!-- login modal -->
+<script type="text/ng-template" id="loginScreen.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Login</h3>
+    </div>
+    <div class="modal-body">
+        <form id="loginForm" name="loginFormName" class="form-horizontal" role="form" novalidate>
+            <fieldset>
+                <div class="form-group">
+                    <label for="login" class="col-sm-3 control-label">User Name</label>
+                    <div class="col-sm-9">
+                        <input name="loginName" id="login" type="text" class="form-control" ng-model="userName" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-3 control-label">Password</label>
+                    <div class="col-sm-9">
+                        <input name="passwordName" id="password" type="password" class="form-control" ng-model="password">
+                    </div>
+                </div>
+
+            </fieldset>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">Login</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
+</script>
+
 <!-- HEADER AND NAVBAR -->
 <!-- Site header and navigation -->
 <header class="top" role="header">
@@ -35,8 +65,8 @@
             <span class="glyphicon glyphicon-align-justify"></span>
         </button>
         <nav id="topNav" class="navbar-collapse collapse" role="navigation">
-            <ul class="navbar-nav nav pull-right">
-                <li><a href="#">username</a></li>
+            <ul class="navbar-nav nav pull-right" ng-controller="rs_modal_controller">
+                <li><a ng-click="open()">username</a></li>
             </ul>
 
         </nav>
