--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,7 +49,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="ok()">Login</button>
+        <button class="btn btn-primary" ng-click="ok(userName, password)">Login</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
 </script>
@@ -66,7 +66,7 @@
         </button>
         <nav id="topNav" class="navbar-collapse collapse" role="navigation">
             <ul class="navbar-nav nav pull-right" ng-controller="rs_modal_controller">
-                <li><a ng-click="open()">username</a></li>
+                <li><a ng-click="open()">{{userNameDisplay}}</a></li>
             </ul>
 
         </nav>
