moved out input types into seperate component

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <!-- index.html -->
 <!DOCTYPE html>
-<html ng-app="application">
+<html ng-app="application" lang="en">
 <head>
     <!-- SCROLLS -->
     <!-- load bootstrap and fontawesome via CDN -->
