--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,6 +53,44 @@
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
 </script>
+<!-- lookup modal -->
+<script type="text/ng-template" id="lookupModal.html">
+    <div class="modal-header">
+        <h3 class="modal-title">Lookup</h3>
+    </div>
+    <div class="modal-body">
+        <form id="lookupForm" name="lookupFormName" class="form-horizontal" role="form" novalidate>
+            <fieldset>
+
+                <div class="form-group">
+                    <label for="filterField" class="col-sm-3 control-label">{{filterField}}</label>
+                    <div class="col-sm-9">
+                        <input name="filterFieldName" id="filterField" type="text" class="form-control" ng-model="filterValue" required>
+                    </div>
+                </div>
+
+            </fieldset>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                        <th>ID</th>
+                        <th>Result</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="result in results">
+                        <td><a ng-href="ok(result)">{{result.href | hrefId}}</a></td>
+                        <td>{{result.title}}</td>
+                </tr>
+                </tbody>
+            </table>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-default" ng-click="lookup(filterValue)">Search</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
+</script>
 
 <!-- HEADER AND NAVBAR -->
 <!-- Site header and navigation -->
