--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,13 +32,13 @@
     <div class="modal-body">
         <form id="loginForm" name="loginFormName" class="form-horizontal" role="form" novalidate>
             <fieldset>
-                <div class="form-group">
+                <div class="form-group form-group-sm">
                     <label for="login" class="col-sm-3 control-label">User Name</label>
                     <div class="col-sm-9">
                         <input name="loginName" id="login" type="text" class="form-control" ng-model="userName" required>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group form-group-sm">
                     <label for="password" class="col-sm-3 control-label">Password</label>
                     <div class="col-sm-9">
                         <input name="passwordName" id="password" type="password" class="form-control" ng-model="password">
@@ -49,8 +49,10 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="ok(userName, password)">Login</button>
-        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+       <div class="btn-group btn-group-sm">
+            <button class="btn btn-primary" ng-click="ok(userName, password)">Login</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+       </div>
     </div>
 </script>
 <!-- lookup modal -->
@@ -72,16 +74,16 @@
             </fieldset>
             <table class="table table-striped">
                 <thead>
-                <tr>
-                        <th>ID</th>
-                        <th>Result</th>
-                </tr>
+                    <tr>
+                            <th>ID</th>
+                            <th>Result</th>
+                    </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="result in results">
-                        <td><a ng-href="ok(result)">{{result.href | hrefId}}</a></td>
-                        <td>{{result.title}}</td>
-                </tr>
+                    <tr ng-repeat="result in results">
+                            <td><a ng-click="ok(result)">{{result.href | hrefId}}</a></td>
+                            <td>{{result.title}}</td>
+                    </tr>
                 </tbody>
             </table>
         </form>
@@ -95,6 +97,8 @@
 <!-- HEADER AND NAVBAR -->
 <!-- Site header and navigation -->
 <header class="top" role="header">
+
+    <!--
     <div class="container-fluid navbar-inverse">
         <a href="#" class="navbar-brand pull-left ">
             My Application
@@ -103,20 +107,62 @@
             <span class="glyphicon glyphicon-align-justify"></span>
         </button>
         <nav id="topNav" class="navbar-collapse collapse" role="navigation">
-            <ul class="navbar-nav nav pull-right" ng-controller="rs_modal_controller">
+            <ul class="navbar-nav nav pull-right" ng-controller="reLoginModalController">
                 <li><a ng-click="open()">{{userNameDisplay}}</a></li>
             </ul>
 
         </nav>
     </div>
+    -->
+    <nav class="navbar navbar-default   " role="navigation">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"><i class="glyphicon glyphicon-leaf"></i>&nbsp;MyApplication</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav" ng-controller="rs_menu_Controller">
+                    <li class="divider"></li>
+                    <li class="dropdown" ng-repeat="group in $root.menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-th-large"></i>&nbsp;{{group.name}} <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li ng-repeat="item in group.items"><a href="#{{item.link}}.html">{{item.name}}</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <!--
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                -->
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown" ng-controller="reLoginModalController">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i>&nbsp;{{userNameDisplay}} <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a ng-click="open()"><i class="glyphicon glyphicon-repeat"></i>&nbsp;Change user</a></li>
+                            <li><a ng-click="open()"><i class="glyphicon glyphicon-off"></i>&nbsp;Logout</a></li>
+                            <li><a ng-click="open()"><i class="glyphicon glyphicon-flag"></i>&nbsp;Language</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
 
 </header>
-
-<br/>
-<br/>
-
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid" ng-view>
+        <!--
         <div class="col-md-2">
 
             <div class="panel-group" id="accordion" ng-controller="rs_menu_Controller">
@@ -138,19 +184,14 @@
                 </div>
             </div>
 
+        <div class="container" ng-view>
         </div>
 
+        -->
         <!-- MAIN CONTENT AND INJECTED VIEWS -->
-        <div class="col-md-10">
 
 
-            <!-- angular templating -->
-            <!-- this is where content will be injected -->
-            <div class="panel panel-default nav-stacked" ng-view>
-            </div>
 
-
-        </div>
 
 
     </div>
