--- a/src/main/webapp/test/MrConfigSpecRunner.html
+++ b/src/main/webapp/test/MrConfigSpecRunner.html
@@ -12,15 +12,15 @@
   <script type="text/javascript" src="lib/jasmine-2.0.2/boot.js"></script>
 
 
-  <script src="../js/angular.js"></script>
-  <script src="../js/angular-resource.js"></script>
-  <script src="../js/angular-route.js"></script>
+  <script src="/js/angular.js"></script>
+  <script src="/js/angular-resource.js"></script>
+  <script src="/js/angular-route.js"></script>
+  <script src="/js/ui-bootstrap-tpls-0.11.0.js"></script>
   <script src="lib/angular-mocks.js"></script>
-  <script src="../app/app.js"></script>
-  <script src="../app/framework.js"></script>
-  <script src="../../views/navigation.js"></script>
-  <script src="../../views/controllers.js"></script>
-  <script src="../js/ui-bootstrap-tpls-0.11.0.js"></script>
+
+
+  <script src="/js/levelthree-core.js"></script>
+  <script src="/js/levelthree-forms.js"></script>
 
 
   <!-- include source files here... -->
@@ -30,7 +30,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/PlayerSpec.js"></script>
-  <script type="text/javascript" src="spec/AppSpec.js"></script>
+  <script type="text/javascript" src="spec/levelthree-core-spec.js"></script>
 
 </head>
 
