refactoring and modularisation of controllers

--- a/src/main/webapp/test/MrConfigSpecRunner.html
+++ b/src/main/webapp/test/MrConfigSpecRunner.html
@@ -12,15 +12,15 @@
   <script type="text/javascript" src="lib/jasmine-2.0.2/boot.js"></script>
 
 
-  <script src="/js/angular.js"></script>
-  <script src="/js/angular-resource.js"></script>
-  <script src="/js/angular-route.js"></script>
-  <script src="/js/ui-bootstrap-tpls-0.11.0.js"></script>
+  <script src="../js/angular.js"></script>
+  <script src="../js/angular-resource.js"></script>
+  <script src="../js/angular-route.js"></script>
+  <script src="../js/ui-bootstrap-tpls-0.11.0.js"></script>
   <script src="lib/angular-mocks.js"></script>
 
 
-  <script src="/js/levelthree-core.js"></script>
-  <script src="/js/levelthree-forms.js"></script>
+  <script src="../js/levelthree-core.js"></script>
+  <script src="../js/levelthree-forms.js"></script>
 
 
   <!-- include source files here... -->
