created resource definition

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,8 +21,7 @@
 
     <script src="js/levelthree-core.js"></script>
     <script src="js/levelthree-forms.js"></script>
-    <script src="views/navigation.js"></script>
-    <script src="views/controllers.js"></script>
+    <script src="ng-app/application.js"></script>
     <style>
         .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
     </style>
