--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 
     <!-- SPELLS -->
     <!-- load angular via CDN -->
-    <script src="js/angular.js"></script>
+    <script src="js/angular-1.3.0.19.js"></script>
     <script src="js/angular-resource.js"></script>
     <script src="js/angular-route.js"></script>
     <script src="js/ui-bootstrap-tpls-0.11.0.js"></script>
@@ -141,7 +141,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-th-large"></i>&nbsp;{{group.name}} <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="item in group.items">
-                                <a href="#{{item.link}}.html">{{item.name}}</a>
+                                <a href="#{{item.link}}">{{item.name}}</a>
                             </li>
                         </ul>
                     </li>
