--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 
     <!-- SPELLS -->
     <!-- load angular via CDN -->
-    <script src="js/angular-1.3.0.19.js"></script>
+    <script src="js/angular-1.3.0.js"></script>
     <script src="js/angular-resource.js"></script>
     <script src="js/angular-route.js"></script>
     <script src="js/ui-bootstrap-tpls-0.11.0.js"></script>
@@ -95,6 +95,18 @@
         </form>
     </div>
     <div class="modal-footer">
+        <div align="center">
+            <pagination total-items="totalResults"
+                        ng-model="currentPage"
+                        items-per-page="15"
+                        ng-change="doPage(model, {}, currentPage)"
+                        class="pagination-sm"
+                        previous-text="&lsaquo;"
+                        next-text="&rsaquo;"
+                        first-text="&laquo;"
+                        last-text="&raquo;">
+            </pagination>
+        </div>
         <button class="btn btn-default" ng-click="lookup(filterValue)">Search</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
