--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -132,7 +132,7 @@
         </nav>
     </div>
     -->
-    <nav class="navbar navbar-default   " role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -147,7 +147,7 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav" ng-controller="rs_menu_Controller">
+                <ul class="nav navbar-nav" ng-controller="LtMenuController">
                     <li class="divider"></li>
                     <li class="dropdown" ng-repeat="group in $root.menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-th-large"></i>&nbsp;{{group.name}} <span class="caret"></span></a>
@@ -167,7 +167,7 @@
                 </form>
                 -->
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown" ng-controller="reLoginModalController">
+                    <li class="dropdown" ng-controller="LtLoginModalController">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i>&nbsp;{{userNameDisplay}} <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a ng-click="open()"><i class="glyphicon glyphicon-repeat"></i>&nbsp;Change user</a></li>
@@ -176,7 +176,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#" ng-controller="reLoadingController"><img ng-show="show" src="images/ajax-loader.gif"></a>
+                        <a href="#" ng-controller="LtLoadingController"><img ng-show="show" src="images/ajax-loader.gif"></a>
                     </li>
                 </ul>
             </div><!-- /.navbar-collapse -->
