reworking angular code generation architecture

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -186,7 +186,7 @@
     </nav>
 
 </header>
-<div class="container-fluid" ng-view>
+<div class="container-fluid" ng-template>
         <!--
         <div class="col-md-2">
 
@@ -209,7 +209,7 @@
                 </div>
             </div>
 
-        <div class="container" ng-view>
+        <div class="container" ng-template>
         </div>
 
         -->
