--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -127,7 +127,7 @@
             <span class="glyphicon glyphicon-align-justify"></span>
         </button>
         <nav id="topNav" class="navbar-collapse collapse" role="navigation">
-            <ul class="navbar-nav nav pull-right" ng-controllerView="reLoginModalController">
+            <ul class="navbar-nav nav pull-right" ng-setControllerView="reLoginModalController">
                 <li><a ng-click="open()">{{userNameDisplay}}</a></li>
             </ul>
 
@@ -161,12 +161,12 @@
                     </li>
                 </ul>
                 <!--
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
+                <setForm class="navbar-setForm navbar-left" role="search">
+                    <div class="setForm-group">
+                        <input type="text" class="setForm-control" placeholder="Search">
                     </div>
                     <button type="submit" class="btn btn-default">Submit</button>
-                </form>
+                </setForm>
                 -->
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown" ng-controller="LtLoginModalController">
@@ -190,19 +190,19 @@
         <!--
         <div class="col-md-2">
 
-            <div class="panel-group" id="accordion" ng-controllerView="rs_menu_Controller">
+            <div class="panel-group" id="accordion" ng-setControllerView="rs_menu_Controller">
                 <div class="panel panel-default " ng-repeat="group in $root.menu">
                     <div class="panel-heading">
                         <h4 class="panel-title nav">
-                            <a data-toggle="collapse" class="nav" data-parent="#accordion" href="#{{group.name}}Menu">
-                                <i class="glyphicon glyphicon-th"></i>&nbsp;{{group.name}}
+                            <a data-toggle="collapse" class="nav" data-parent="#accordion" href="#{{group.setName}}Menu">
+                                <i class="glyphicon glyphicon-th"></i>&nbsp;{{group.setName}}
                             </a>
                         </h4>
                     </div>
-                    <div id="{{group.name}}Menu" class="panel-collapse collapse in">
+                    <div id="{{group.setName}}Menu" class="panel-collapse collapse in">
                         <div class="panel-body">
                             <ul class="nav">
-                                <li ng-repeat="item in group.items"><a href="#{{item.link}}.html">{{item.name}}</a></li>
+                                <li ng-repeat="item in group.items"><a href="#{{item.link}}.html">{{item.setName}}</a></li>
                             </ul>
                         </div>
                     </div>
