got tests working

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,20 +4,20 @@
 <head>
 
     <script src="js/jquery/dist/jquery.js"></script>
-    <script src="js/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
 
     <!-- SCROLLS -->
     <!-- load bootstrap and fontawesome via CDN -->
-    <link rel="stylesheet" href="js/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="js/bootstrap/dist/css/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/bootstrap-theme.css"/>
     <link rel="stylesheet" href="css/codepen.css"/>
-    <!--link rel="stylesheet" href="css/font-awesome.css"-->
+    <link rel="stylesheet" href="css/font-awesome.css">
 
     <!-- SPELLS -->
     <!-- load angular via CDN -->
     <script src="js/angular/angular.js"></script>
-    <script src="js/angular-resource/angular-resource.js"></script>
-    <script src="js/angular-route/angular-route.js"></script>
+    <script src="js/angular-resource.js"></script>
+    <script src="js/angular-route.js"></script>
     <script src="js/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="js/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
